--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>LEARN 1 - CREATE AN ANIMATED SIDE NAVIGATION</h1>
+    <h2>There is Examp</h2>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">Menu 1</a>
